[tool.poetry]
name = "darca-repository"
version = "0.0.1"
description = "Darca repository management library"
authors = ["Roel Kist <roel.kist@gmail.com>"]
license = "LICENSE"
readme = "README.rst"


[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.11.4"
typing-extensions = "^4.13.2" 
darca-exception = "^0.1.1"
darca-storage = "^0.0.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.0.0"
pytest-xdist = "^3.7.0"
flake8 = "^7.1.2"
black = "^25.1.0"
isort = "^6.0.1"
bandit = "^1.8.3"
mypy = "^1.15.0"
mypy-extensions = "^1.0.0"
pre-commit = "^4.1.0"
coverage-badge = "^1.1.2"
pytest-asyncio = "^1.0.0"


[tool.poetry.group.docs.dependencies]
sphinx = "^8.2.3"
sphinx-rtd-theme = "^3.0.2"
sphinxcontrib-applehelp = "^2.0.0"
sphinxcontrib-devhelp = "^2.0.0"
sphinxcontrib-htmlhelp = "^2.1.0"
sphinxcontrib-jsmath = "^1.0.1"
sphinxcontrib-qthelp = "^2.0.0"
sphinxcontrib-serializinghtml = "^2.0.0"
sphinxcontrib-plantuml = "^0.30"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
asyncio_default_test_loop_scope = "function"